--- a/Aplicaciones/Plataforma/templates/listaPlataforma.html
+++ b/Aplicaciones/Plataforma/templates/listaPlataforma.html
@@ -2,6 +2,7 @@
 {% load static %}
 
 {% block contenido %}
+<br>
 <section class="container py-5">
   <div class="row justify-content-center">
     <div class="col-lg-10">
@@ -9,9 +10,9 @@
       <div class="text-end mb-3">
         <a href="nuevaPlataforma/" class="btn btn-success">
           <i class="bi bi-plus-circle"></i> Agregar Plataforma
-        </a>
+        </a> <br><br>
       </div>
-
+      
       <div class="table-responsive">
         <table id="tbl_plataformas" class="table table-bordered table-striped table-hover align-middle">
           <thead class="table-info text-center">
@@ -67,15 +68,14 @@
           $(document).ready(function() {
               $('#tbl_plataformas').DataTable({
                   language: {
-                    url: 'https://cdn.datatables.net/plug-ins/1.13.6/i18n/es-ES.json'
+                      url: 'https://cdn.datatables.net/plug-ins/1.13.6/i18n/es-ES.json'
                   },
                   dom: 'Bfrtip',
-                  buttons: [
-                      'copy', 'csv', 'excel', 'pdf', 'print'
-                  ]
+                  buttons: ['copy', 'csv', 'excel', 'pdf', 'print']
               });
           });
         </script>
+
       </div>
     </div>
   </div>
