--- a/Aplicaciones/Plataforma/templates/nuevaPlataforma.html
+++ b/Aplicaciones/Plataforma/templates/nuevaPlataforma.html
@@ -3,7 +3,8 @@
 {% block contenido %} 
 
 <br><br><br>
-<div class="row justify-content-center">
+<div class="row justify-content-center"></div>
+
     <div class="col-md-8">
         <div class="card shadow-lg border-0 rounded-4">
             <div class="card-body p-5" style="background-color: #feffff;">
